{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 3229,
  "lineage": "e68a10f2-99cf-f06b-cbab-ef6396e3a9dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:security-group/sg-0c145fbe9a9a4326a",
            "description": "ALB SG: inbound from Internet, outbound to ECS",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS backend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025c0939408bcf376"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025c0939408bcf376"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c145fbe9a9a4326a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-alb-sg-dev",
            "name_prefix": "",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-alb-sg-dev"
            },
            "tags_all": {
              "Name": "myapp-alb-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "sg-0c145fbe9a9a4326a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ecs_service",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:security-group/sg-025c0939408bcf376",
            "description": "Allow inbound from ALB, outbound to RDS or Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to RDS and Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025c0939408bcf376",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB to ECS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c145fbe9a9a4326a"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow backend traffic from ALB to ECS",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c145fbe9a9a4326a"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "myapp-ecs-service-sg-dev",
            "name_prefix": "",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-ecs-service-sg-dev"
            },
            "tags_all": {
              "Name": "myapp-ecs-service-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "sg-025c0939408bcf376",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:security-group/sg-070b484d7e10d3d70",
            "description": "Allow PostgreSQL access from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070b484d7e10d3d70",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "myapp-rds-sg-dev",
            "name_prefix": "",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "sg-070b484d7e10d3d70",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ecs_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS tasks to connect to RDS",
            "from_port": 5432,
            "id": "sgrule-1429437466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-070b484d7e10d3d70",
            "security_group_rule_id": "sgr-0701d53f74d5cc39e",
            "self": false,
            "source_security_group_id": "sg-025c0939408bcf376",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_security_group.rds_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_from_alb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow backend traffic from ALB to ECS",
            "from_port": 8080,
            "id": "sgrule-3358241480",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-025c0939408bcf376",
            "security_group_rule_id": "sgr-0494d5169ce2b1962",
            "self": false,
            "source_security_group_id": "sg-0c145fbe9a9a4326a",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_service",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_from_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from ALB to ECS",
            "from_port": 80,
            "id": "sgrule-2653867034",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-025c0939408bcf376",
            "security_group_rule_id": "sgr-0fe7156fcee2d1268",
            "self": false,
            "source_security_group_id": "sg-0c145fbe9a9a4326a",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_service",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:loadbalancer/app/myapp-alb-dev/414b65819ce4da47",
            "arn_suffix": "app/myapp-alb-dev/414b65819ce4da47",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-alb-dev-202216256.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:365165252715:loadbalancer/app/myapp-alb-dev/414b65819ce4da47",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-alb-dev",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-007519a4cd2d7be38",
              "sg-0c145fbe9a9a4326a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03ea06e62cb7ebe15"
              },
              {
                "subnet_id": "subnet-057f11453e5d5d92d"
              }
            ],
            "subnets": [
              "subnet-03ea06e62cb7ebe15",
              "subnet-057f11453e5d5d92d"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:loadbalancer/app/myapp-alb-dev/414b65819ce4da47"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_service",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:listener/app/myapp-alb-dev/414b65819ce4da47/c81da115b76b4f56",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:targetgroup/fe-20251121201244694900000005/bdf9f6e18950440f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:365165252715:listener/app/myapp-alb-dev/414b65819ce4da47/c81da115b76b4f56",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:loadbalancer/app/myapp-alb-dev/414b65819ce4da47",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:listener/app/myapp-alb-dev/414b65819ce4da47/c81da115b76b4f56"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_service",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http/api_rule",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:targetgroup/be-20251121201244671100000004/168873b7a239b706",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:listener-rule/app/myapp-alb-dev/414b65819ce4da47/c81da115b76b4f56/8d54305557c3bf3b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:365165252715:listener-rule/app/myapp-alb-dev/414b65819ce4da47/c81da115b76b4f56/8d54305557c3bf3b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:listener/app/myapp-alb-dev/414b65819ce4da47/c81da115b76b4f56",
            "priority": 1,
            "region": "us-east-1",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:listener-rule/app/myapp-alb-dev/414b65819ce4da47/c81da115b76b4f56/8d54305557c3bf3b"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_service",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:targetgroup/be-20251121201244671100000004/168873b7a239b706",
            "arn_suffix": "targetgroup/be-20251121201244671100000004/168873b7a239b706",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:365165252715:targetgroup/be-20251121201244671100000004/168873b7a239b706",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:365165252715:loadbalancer/app/myapp-alb-dev/414b65819ce4da47"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "be-20251121201244671100000004",
            "name_prefix": "be-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:targetgroup/be-20251121201244671100000004/168873b7a239b706"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:targetgroup/fe-20251121201244694900000005/bdf9f6e18950440f",
            "arn_suffix": "targetgroup/fe-20251121201244694900000005/bdf9f6e18950440f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:365165252715:targetgroup/fe-20251121201244694900000005/bdf9f6e18950440f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:365165252715:loadbalancer/app/myapp-alb-dev/414b65819ce4da47"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fe-20251121201244694900000005",
            "name_prefix": "fe-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:365165252715:targetgroup/fe-20251121201244694900000005/bdf9f6e18950440f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:security-group/sg-007519a4cd2d7be38",
            "description": "Security group for myapp-alb-dev application load balancer",
            "egress": [],
            "id": "sg-007519a4cd2d7be38",
            "ingress": [],
            "name": "myapp-alb-dev-20251121201243017200000003",
            "name_prefix": "myapp-alb-dev-",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "sg-007519a4cd2d7be38",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service_backend",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:subnet/subnet-0727beb438b5ac0fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0727beb438b5ac0fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365165252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "myapp-vpc-dev-private-us-east-1a"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs_service_backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:security-group/sg-0aca1d20d2190a037",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0aca1d20d2190a037",
            "ingress": [],
            "name": "backend-20251121201246929100000007",
            "name_prefix": "backend-",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend"
            },
            "tags_all": {
              "Name": "backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "sg-0aca1d20d2190a037",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs_service_backend.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service_frontend",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:subnet/subnet-0727beb438b5ac0fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0727beb438b5ac0fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365165252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "myapp-vpc-dev-private-us-east-1a"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs_service_frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:security-group/sg-0775ecf06c11c46e1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0775ecf06c11c46e1",
            "ingress": [],
            "name": "frontend-20251121202954208000000001",
            "name_prefix": "frontend-",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "sg-0775ecf06c11c46e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ecs_service_frontend.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:network-acl/acl-0442ea01bc53f68bd",
            "default_network_acl_id": "acl-0442ea01bc53f68bd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0442ea01bc53f68bd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "365165252715",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-03ea06e62cb7ebe15",
              "subnet-057f11453e5d5d92d",
              "subnet-0727beb438b5ac0fd",
              "subnet-0f6243b6c128148e5"
            ],
            "tags": {
              "Name": "myapp-vpc-dev-default"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-default"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:route-table/rtb-020a90f045f0531f6",
            "default_route_table_id": "rtb-020a90f045f0531f6",
            "id": "rtb-020a90f045f0531f6",
            "owner_id": "365165252715",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "myapp-vpc-dev-default"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:security-group/sg-00298a9b1f719c964",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00298a9b1f719c964",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-vpc-dev-default"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-default"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d649487fa693466",
            "arn": "arn:aws:ec2:us-east-1:365165252715:elastic-ip/eipalloc-06d649487fa693466",
            "domain": "vpc",
            "id": "eipalloc-06d649487fa693466",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-196-30-202.compute-1.amazonaws.com",
            "public_ip": "34.196.30.202",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "myapp-vpc-dev-us-east-1a"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:internet-gateway/igw-0c5fb13d613b2877d",
            "id": "igw-0c5fb13d613b2877d",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "tags": {
              "Name": "myapp-vpc-dev"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d649487fa693466",
            "association_id": "eipassoc-024b04752c3241e6b",
            "connectivity_type": "public",
            "id": "nat-0d654373f8b0a395e",
            "network_interface_id": "eni-0a1bcb933dbf06602",
            "private_ip": "10.0.101.78",
            "public_ip": "34.196.30.202",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057f11453e5d5d92d",
            "tags": {
              "Name": "myapp-vpc-dev-us-east-1a"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da56d5466fcdf26a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d654373f8b0a395e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0da56d5466fcdf26a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0da56d5466fcdf26a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c5fb13d613b2877d",
            "id": "r-rtb-038e69fae9b9d42091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-038e69fae9b9d4209",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-038e69fae9b9d4209"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:route-table/rtb-0da56d5466fcdf26a",
            "id": "rtb-0da56d5466fcdf26a",
            "owner_id": "365165252715",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "myapp-vpc-dev-private"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "rtb-0da56d5466fcdf26a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:route-table/rtb-038e69fae9b9d4209",
            "id": "rtb-038e69fae9b9d4209",
            "owner_id": "365165252715",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "myapp-vpc-dev-public"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "rtb-038e69fae9b9d4209",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05015629383218261",
            "region": "us-east-1",
            "route_table_id": "rtb-0da56d5466fcdf26a",
            "subnet_id": "subnet-0727beb438b5ac0fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4151fe31e57e8b3",
            "region": "us-east-1",
            "route_table_id": "rtb-0da56d5466fcdf26a",
            "subnet_id": "subnet-0f6243b6c128148e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d170e2820bc530a7",
            "region": "us-east-1",
            "route_table_id": "rtb-038e69fae9b9d4209",
            "subnet_id": "subnet-057f11453e5d5d92d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9b5faef90e7f232",
            "region": "us-east-1",
            "route_table_id": "rtb-038e69fae9b9d4209",
            "subnet_id": "subnet-03ea06e62cb7ebe15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:subnet/subnet-0727beb438b5ac0fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0727beb438b5ac0fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365165252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "myapp-vpc-dev-private-us-east-1a"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-private-us-east-1a"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "subnet-0727beb438b5ac0fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:subnet/subnet-0f6243b6c128148e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6243b6c128148e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365165252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "myapp-vpc-dev-private-us-east-1b"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-private-us-east-1b"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "subnet-0f6243b6c128148e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:subnet/subnet-057f11453e5d5d92d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f11453e5d5d92d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365165252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "myapp-vpc-dev-public-us-east-1a"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-public-us-east-1a"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "subnet-057f11453e5d5d92d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:subnet/subnet-03ea06e62cb7ebe15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ea06e62cb7ebe15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "365165252715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "myapp-vpc-dev-public-us-east-1b"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev-public-us-east-1b"
            },
            "vpc_id": "vpc-04d9251bfeebfea3a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "subnet-03ea06e62cb7ebe15",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:365165252715:vpc/vpc-04d9251bfeebfea3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0442ea01bc53f68bd",
            "default_route_table_id": "rtb-020a90f045f0531f6",
            "default_security_group_id": "sg-00298a9b1f719c964",
            "dhcp_options_id": "dopt-019c95fef66553a77",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d9251bfeebfea3a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020a90f045f0531f6",
            "owner_id": "365165252715",
            "region": "us-east-1",
            "tags": {
              "Name": "myapp-vpc-dev"
            },
            "tags_all": {
              "Name": "myapp-vpc-dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "365165252715",
            "id": "vpc-04d9251bfeebfea3a",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}